# nev_remote

./: .gitignore  AGENTS.md  README.md
nev_remote/: CMakeLists.txt  package.xml
nev_remote/config/: camera_stream_params.yaml  dual_camera_params.yaml  net_bridge_params.yaml  quad_camera_params.yaml  video_encoder_params.yaml  zenoh_camera_params.yaml
nev_remote/launch/: camera_stream.launch.py  dual_camera.launch.py  net_bridge.launch.py  quad_camera_encoder.launch.py  zenoh_camera.launch.py  zenoh_camera.py  zenoh_video_encoder.launch.py
nev_remote/scripts/: dual_camera_encoder.py  net_bridge.py  quad_camera_encoder.py  webrtc_camera.py  zenoh_camera.py  zenoh_video_encoder.py
nev_remote/test/: test_cam_16mp_0.py  test_cam_16mp_1.py  test_cam_webcam.py  test_server.py
nev_remote_msgs/: CMakeLists.txt  package.xml
nev_remote_msgs/msg/: NetworkStatus.msg  SystemResources.msg
nev_teleop_bot/: CMakeLists.txt  package.xml
nev_teleop_bot/config/: dual_camera_params.yaml  net_bridge_params.yaml  network.yaml  quad_camera_params.yaml  teleop_topics.yaml  video_encoder_params.yaml  video_params_h264.yaml  video_params_h265.yaml
nev_teleop_bot/include/: multi_cam_pub.hpp  multi_cam_raw_pub.hpp  stitch_cam_pub.hpp  video_bridge_base.hpp  wide_cam_pub.hpp
nev_teleop_bot/launch/: dual_camera.launch.py  net_bridge.launch.py  quad_camera_encoder.launch.py  teleop_cameras.launch.py  video_bridge_h264.launch.py  video_bridge_h265.launch.py  zenoh_video_encoder.launch.py
nev_teleop_bot/param/: ELP-USB16MP01-BL180-2048x1536_calibration.json
nev_teleop_bot/scripts/: dual_camera_encoder.py  net_bridge.py  quad_camera_encoder.py  zenoh_video_encoder.py
nev_teleop_bot/scripts/net_bridge/: __init__.py  health_monitor.py  inbound_commands.py  telemetry_publisher.py  vehicle_topics.py  zenoh_transport.py
nev_teleop_bot/src/: multi_cam_pub_component.cpp  multi_cam_pub_node.cpp  multi_cam_raw_pub_node.cpp  stitch_cam_pub_node.cpp  video_bridge_h264.cpp  video_bridge_h265.cpp  wide_cam_pub_component.cpp  wide_cam_pub_node.cpp
nev_teleop_bot/test/: test_cam_16mp_0.py  test_cam_16mp_1.py  test_cam_composition.cpp  test_cam_topic_pub.py  test_cam_webcam.py  test_multi_cam_pub.py  test_stitch_cam_pub.py  test_zenoh_send.py
nev_teleop_bot_msgs/: CMakeLists.txt  package.xml
nev_teleop_bot_msgs/msg/: CmdMode.msg  EStopStatus.msg  MuxStatus.msg  NetworkStatus.msg
